--- a/result.html
+++ b/result.html
@@ -5,18 +5,20 @@
     <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
-    <h1>Scalp Analysis Result</h1>
-    <p>Your scalp condition is: <strong>{{ condition }}</strong></p>
-    
-    <h2>Original Image</h2>
-    <img src="{{ image_url }}" width="300px">
+    <div class="container">
+        <h1>Scalp Analysis Result</h1>
+        <p>Your scalp condition is: <strong>{{ condition }}</strong></p>
 
-    <h2>Preprocessing Steps</h2>
-    {% for step, path in processed_paths.items() %}
-        <h3>{{ step.replace("_", " ") }}</h3>
-        <img src="{{ path }}" width="300px">
-    {% endfor %}
+        <h2>Original Image</h2>
+        <img src="{{ image_url }}" width="300px">
 
-    <a href="/">Upload another image</a>
+        <h2>Preprocessing Steps Applied:</h2>
+        {% for step, path in processed_paths.items() %}
+            <h3>{{ step.replace("_", " ") }}</h3>
+            <img src="{{ path }}" width="300px">
+        {% endfor %}
+
+        <a href="/">Upload another image</a>
+    </div>
 </body>
 </html>
